--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
+   
+   
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body>
- <h2>Gruppe 8 webside</h2>
+   <header class="card-panel teal lighten-2">
+     <h2>Gruppe 8 webside</h2>
+   </header>
+   <div class="container">
+    <h2>Beskrivelse</h2>
+    <p>
+[NB DETTE ER TENTATIVT]
+NAV IT Informasjonsplattform holder på med et større arbeid for å oppdatere sin infrastruktur for å kunne levere bedre tjenester. Vi har fått tilbud om å være med å bidra på et prosjekt som er en del av dette arbeidet. Prosjektet som vi har fått mulighet til å bidra på heter Åpne data. Dette prosjektet har som mål å bygge en plattform/verktøykasse for NAV IT slik at deling av data fra NAV til det åpne publikum kan skje ofte, raskt og sikkert. Brukergruppen som i grunn er hele Norges befolkning skal få tilgang på datasettene som rådata og gjennom visualiseringer/dashboards.
+    </p>
+   </div>
+
   </body>
 </html>
