--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>title</title>
+    <title>Prosjekt side | Gruppe 8 OsloMET</title>
   <meta name="author" content="Gruppe 8">
   <meta name="description" content="description here">
   <meta name="keywords" content="Bachelor Oppgave, OsloMET, DATA/IT, 2019">
