--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
 NAV IT Informasjonsplattform holder på med et større arbeid for å oppdatere sin infrastruktur for å kunne levere bedre tjenester. Vi har fått tilbud om å være med å bidra på et prosjekt som er en del av dette arbeidet. Prosjektet som vi har fått mulighet til å bidra på heter Åpne data. Dette prosjektet har som mål å bygge en plattform/verktøykasse for NAV IT slik at deling av data fra NAV til det åpne publikum kan skje ofte, raskt og sikkert. Brukergruppen som i grunn er hele Norges befolkning skal få tilgang på datasettene som rådata og gjennom visualiseringer/dashboards.
     </p>
    </div>
-   <div class="card-panel teal lighten-2 row">
+   <div class="card-panel teal lighten-2">
+    <div class="row">
       <div class="col s12 m2">Viktor</div>
       <div class="col s12 m2">Jerry</div>
       <div class="col s12 m2">Andre</div>
       <div class="col s12 m2">Sondre</div>
       <div class="col s12 m2">Julian</div>
+    </div>
    </div>
    <footer class="center-align">
     <a href="#">Om oss</a> 
