--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
    
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -19,9 +20,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body>
-   <header class="card-panel teal lighten-2">
-     <h2>Gruppe 8 webside</h2>
-   </header>
+     <nav class="nav-extended teal lighten-2">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo"><i class="material-icons">cloud_done</i></a>
+      <div class="nav-content">
+      <span class="nav-title">Gruppe 8 Bacheloroppgave Prosjektside</span>
+    </div>
+    </div>
+  </nav>
    <div class="container">
     <h2>Beskrivelse</h2>
     <p>
