--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <body>
      <nav class="nav-extended teal lighten-2">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo"><i class="material-icons">cloud_done</i></a>
-      <div class="nav-content">
+      <a href="#" class="brand-logo"><i class="material-icons large">cloud_done</i></a>
+      <div class="nav-content center-align">
       <span class="nav-title">Gruppe 8 Bacheloroppgave Prosjektside</span>
     </div>
     </div>
