--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ NAV IT Informasjonsplattform holder på med et større arbeid for å oppdatere s
     </p>
    </div>
    <div class="card-panel teal lighten-2">
-    <div class="row">
+    <div class="row center-align">
       <div class="col s12 m2">Viktor</div>
       <div class="col s12 m2">Jerry</div>
       <div class="col s12 m2">Andre</div>
