--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body>
-     <nav class="nav-extended teal lighten-2" style=" height: 20%; background-size: cover; background-image: url('https://pixabay.com/get/e030b60c21f21c22d9584518a33219c8b66ae3d01ab7194691f8c87f/oslo-957396_1920.jpg');">
+     <nav class="nav-extended teal lighten-2" style=" height: 30em; background-size: cover; background-image: url('https://pixabay.com/get/e030b60c21f21c22d9584518a33219c8b66ae3d01ab7194691f8c87f/oslo-957396_1920.jpg');">
     <div class="nav-wrapper">
       <a href="#" class="brand-logo"><i class="large material-icons" style="padding:1em; font-size: 50px;">cloud_done</i></a>
       <div class="nav-content center-align">
