--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo"><i class="large material-icons" style="padding:1em; font-size: 50px;">cloud_done</i></a>
       <div class="nav-content center-align">
-      <span class="nav-title">Gruppe 8 Bacheloroppgave Prosjektside</span>
+       <div class="valign-wrapper">
+        <span class="nav-title">Gruppe 8 Bacheloroppgave Prosjektside</span>
+       </div>
     </div>
     </div>
   </nav>
