--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <body>
      <nav class="nav-extended teal lighten-2" style=" height: 30em; background-size: cover; background-image: url('https://pixabay.com/get/e030b60c21f21c22d9584518a33219c8b66ae3d01ab7194691f8c87f/oslo-957396_1920.jpg');">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo"><i class="large material-icons" style="padding:1em; font-size: 50px;">cloud_done</i></a>
       <div class="nav-content center-align">
        <div class="valign-wrapper">
+        <i class="large material-icons" style="padding:1em;">cloud_done</i>
         <span class="nav-title">Gruppe 8 Bacheloroppgave Prosjektside</span>
        </div>
     </div>
