--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
   </head>
   <body>
      <nav class="nav-extended transparent" style=" height: 30em; background-size: cover; background-image: url('https://pixabay.com/get/e030b60c21f21c22d9584518a33219c8b66ae3d01ab7194691f8c87f/oslo-957396_1920.jpg');">
-    <div class="nav-wrapper">
-      <div class="nav-content center-align">
-       <div class="valign-wrapper row">
-         <div class="col s12"><i class="large material-icons">cloud_done</i></div>
-         <div class="col s12"><span class="nav-title">Gruppe 8 Bacheloroppgave Prosjektside</span></div>
+      <div class="valign-wrapper">
+       <div class="nav-wrapper">
+        <div class="nav-content center-align">
+         <div class="row">
+          <div class="col s12"><i class="large material-icons">cloud_done</i></div>
+          <div class="col s12"><span class="nav-title">Gruppe 8 Bacheloroppgave Prosjektside</span></div>
+         </div>
        </div>
-    </div>
+      </div>
     </div>
   </nav>
    <div class="container">
