--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
      <nav class="nav-extended" style=" height: 30em; background-size: cover; background-image: url('https://pixabay.com/get/e030b60c21f21c22d9584518a33219c8b66ae3d01ab7194691f8c87f/oslo-957396_1920.jpg');">
-      <div class="valign-wrapper">
+      <div class="valign-wrapper" style="height: 30em;">
        <div class="nav-wrapper">
         <div class="nav-content center-align">
          <div class="row">
