--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body>
-     <nav class="nav-extended" style=" height: 30em; background-size: cover; background-image: url('oslo.jpg');">
+     <nav class="nav-extended grey" style=" height: 30em; background-size: cover; background-image: url('oslo.jpg');">
       <div class="valign-wrapper" style="height: 30em;">
        <div class="nav-wrapper">
         <div class="nav-content center-align">
