--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
      <nav class="nav-extended grey" style=" height: 30em; background-size: cover; background-image: url('oslo.jpg');">
       <div class="valign-wrapper" style="height: 30em;">
        <div class="nav-wrapper">
-        <div class="nav-content center-align">
+        <div class="nav-content">
          <div class="row">
-          <div class="col s12"><i class="large material-icons">cloud_done</i></div>
-          <div class="col s12"><span class="nav-title">Gruppe 8 Bacheloroppgave Prosjektside</span></div>
+          <div class="col s12 center-align"><i class="large material-icons">cloud_done</i></div>
+          <div class="col s12 center-align"><span class="nav-title">Gruppe 8 Bacheloroppgave Prosjektside</span></div>
          </div>
        </div>
       </div>
