--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
        <div class="nav-wrapper">
         <div class="nav-content">
          <div class="row">
-          <div class="col s12 center-align"><i class="large material-icons">cloud_done</i></div>
-          <div class="col s12 center-align"><span class="nav-title">Gruppe 8 Bacheloroppgave Prosjektside</span></div>
+          <div class="col s12 center-align-text"><i class="large material-icons" style="font-size: 100px;">cloud_done</i></div>
+          <div class="col s12 center-align-text"><span class="nav-title">Gruppe 8 Bacheloroppgave Prosjektside</span></div>
          </div>
        </div>
       </div>
