--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ NAV IT Informasjonsplattform holder på med et større arbeid for å oppdatere s
    </div>
    <div class="card-panel center-align" style="background-color: #FFCC00;">
     <span class="center-align" style="padding:1em;"><h4>Gruppemedlemer</h4></span>
-    <div class="row center-align">
+    <div class="row center-align center-align-text">
       <div class="col s12 m2">Viktor</div>
       <div class="col s12 m2">Jerry</div>
       <div class="col s12 m2">Andre</div>
