--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </head>
   <body>
      <nav class="nav-extended grey" style=" height: 30em; background-size: cover; background-image: url('oslo.jpg');">
-      <div class="valign-wrapper" style="height: 30em;">
-       <div class="nav-wrapper">
+      <div class="valign-wrapper center-align" style="height: 30em;">
+       <div class="nav-wrapper" style="width:100%;">
         <div class="nav-content">
          <div class="row">
           <div class="col s12 center-align-text"><i class="large material-icons" style="font-size: 100px;">cloud_done</i></div>
