--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Prosjekt side | Gruppe 8 OsloMET</title>
   <meta name="author" content="Gruppe 8">
-  <meta name="description" content="description here">
+  <meta name="description" content="Presentasjons side for Bachelorprosjektet til gruppe 8 for OsloMET 2019">
   <meta name="keywords" content="Bachelor Oppgave, OsloMET, DATA/IT, 2019">
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
