--- a/index.html
+++ b/index.html
@@ -38,15 +38,32 @@
 [NB DETTE ER TENTATIVT]<br>
 NAV IT Informasjonsplattform holder på med et større arbeid for å oppdatere sin infrastruktur for å kunne levere bedre tjenester. Vi har fått tilbud om å være med å bidra på et prosjekt som er en del av dette arbeidet. Prosjektet som vi har fått mulighet til å bidra på heter Åpne data. Dette prosjektet har som mål å bygge en plattform/verktøykasse for NAV IT slik at deling av data fra NAV til det åpne publikum kan skje ofte, raskt og sikkert. Brukergruppen som i grunn er hele Norges befolkning skal få tilgang på datasettene som rådata og gjennom visualiseringer/dashboards.
     </p>
+    <a class="waves-effect waves-light btn" href="resources/Prosjektskisse.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Prosjektskisse</a>
+    <br>
    </div>
    <div class="card-panel center-align" style="background-color: #FFCC00;">
     <span class="center-align" style="padding:1em;"><h4>Gruppemedlemer</h4></span>
     <div class="row center-align center-align-text">
-      <div class="col s12 m3">Viktor</div>
-      <div class="col s12 m2">Jerry</div>
-      <div class="col s12 m2">Andre</div>
-      <div class="col s12 m2">Sondre</div>
-      <div class="col s12 m3">Julian</div>
+      <div class="col s12 m3">
+        <img src="resources/placeholder-profile-image.jpg" width="150px" alt="" class="circle responsive-img">
+        <p>Viktor</p>
+      </div>
+      <div class="col s12 m2">
+        <img src="resources/placeholder-profile-image.jpg" width="150px" alt="" class="circle responsive-img">
+        <p>Jerry</p>
+      </div>
+      <div class="col s12 m2">
+        <img src="resources/placeholder-profile-image.jpg" width="150px" alt="" class="circle responsive-img">
+        <p>Andre</p>
+      </div>
+      <div class="col s12 m2">
+        <img src="resources/placeholder-profile-image.jpg" width="150px" alt="" class="circle responsive-img">
+        <p>Sondre</p>
+      </div>
+      <div class="col s12 m3">
+        <img src="resources/placeholder-profile-image.jpg" width="150px" alt="" class="circle responsive-img">
+        <p>Julian</p>
+      </div>
     </div>
    </div>
    <footer class="center-align">
