Add more project spesific text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
     <h3>Beskrivelse</h3>
     <p>
 [NB DETTE ER TENTATIVT]<br>
-NAV IT Informasjonsplattform holder på med et større arbeid for å oppdatere sin infrastruktur for å kunne levere bedre tjenester. Vi har fått tilbud om å være med å bidra på et prosjekt som er en del av dette arbeidet. Prosjektet som vi har fått mulighet til å bidra på heter Åpne data. Dette prosjektet har som mål å bygge en plattform/verktøykasse for NAV IT slik at deling av data fra NAV til det åpne publikum kan skje ofte, raskt og sikkert. Brukergruppen som i grunn er hele Norges befolkning skal få tilgang på datasettene som rådata og gjennom visualiseringer/dashboards.
+NAV IT Informasjonsplattform holder på med et større arbeid for å oppdatere sin infrastruktur for å kunne levere 
+bedre tjenester. Vi har fått tilbud om å være med å bidra på et prosjekt som er en del av dette arbeidet. 
+Prosjektet som vi har fått mulighet til å bidra på heter Åpne data. Dette prosjektet har som mål å bygge en
+ plattform/verktøykasse for NAV IT slik at deling av data fra NAV til det åpne publikum kan skje ofte, raskt
+  og sikkert. Brukergruppen som i grunn er hele Norges befolkning skal få tilgang på datasettene som rådata og
+   gjennom visualiseringer/dashboards.
+
+   Gruppen har blitt utfordret til å tenke nytt ang kart visualiseringer av datasettene som vil bli gjort tilgjenngelig av Åpne Data prosjektet.
+   Ved hjelp av løsningen skal være mulig å dynamisk visualisere vilkårlige datasett etter som de blir publisert/oppdatert.
     </p>
     <a class="waves-effect waves-light btn" href="resources/Prosjektskisse.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Prosjektskisse</a>
     <br>
