--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="description" content="Presentasjons side for Bachelorprosjektet til gruppe 8 for OsloMET 2019">
   <meta name="keywords" content="Bachelor Oppgave, OsloMET, DATA/IT, 2019">
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
-  <link rel="stylesheet" href="stylesheet.css" type="text/css">
-   
+  <link rel="stylesheet" href="css/sitecss.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Anton|Monoton|Russo+One" rel="stylesheet">
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    
     <!-- Compiled and minified CSS -->
@@ -26,7 +26,11 @@
         <div class="nav-content">
          <div class="row">
           <div class="col s12 center-align-text"><i class="large material-icons" style="font-size: 100px;">cloud_done</i></div>
-          <div class="col s12 center-align-text"><span class="nav-title">Gruppe 8 Bacheloroppgave Prosjektside</span></div>
+          <div class="col s12 center-align-text">
+              <h5>Gruppe 8 Bachelorprosjekt</h5>
+            <span class="nav-title"><h1>Åpne Data Kartvisualisering</h1>
+
+            </span></div>
          </div>
        </div>
       </div>
