Fix heading overflow

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
          <div class="row">
           <div class="col s12 center-align-text"><i class="large material-icons" style="font-size: 100px;">cloud_done</i></div>
           <div class="col s12 center-align-text">
-              <h5>Gruppe 8 Bachelorprosjekt</h5>
-            <span class="nav-title"><h1>Åpne Data Kartvisualisering</h1>
+             <p>Gruppe 8 Bachelorprosjekt<p>
+    <span class="nav-title btitle" style="font-size: 3em;">Åpne Data Kartvisualisering
 
             </span></div>
          </div>
