--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Prosjektet som vi har fått mulighet til å bidra på heter Åpne data. Dette pr
         <p>Jerry</p>
       </div>
       <div class="col s12 m2">
-        <img src="resources/placeholder-profile-image.jpg" width="150px" alt="" class="circle responsive-img">
+        <img src="resources/small_lord.jpg" width="150px" alt="" class="circle responsive-img">
         <p>Andre</p>
       </div>
       <div class="col s12 m2">
