--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Prosjektet som vi har fått mulighet til å bidra på heter Åpne data. Dette pr
         <p>Andre</p>
       </div>
       <div class="col s12 m2">
-        <img src="resources/placeholder-profile-image.jpg" width="150px" alt="" class="circle responsive-img">
+        <img src="resources/sondre.png" width="150px" alt="" class="circle responsive-img">
         <p>Sondre</p>
       </div>
       <div class="col s12 m3">
