Add Jerry profile image Remove now wrong project description

--- a/index.html
+++ b/index.html
@@ -42,15 +42,7 @@
 
 NAV IT Informasjonsplattform holder på med et større arbeid for å oppdatere sin infrastruktur for å kunne levere 
 bedre tjenester. Vi har fått tilbud om å være med å bidra på et prosjekt som er en del av dette arbeidet. 
-Prosjektet som vi har fått mulighet til å bidra på heter Åpne data. Dette prosjektet har som mål å bygge en
- plattform/verktøykasse for NAV IT slik at deling av data fra NAV til det åpne publikum kan skje ofte, raskt
-  og sikkert. Brukergruppen som i grunn er hele Norges befolkning skal få tilgang på datasettene som rådata og
-   gjennom visualiseringer/dashboards.
-    </p>
-    <p></p>
-   Gruppen har blitt utfordret til å tenke nytt ang kart visualiseringer av datasettene som vil bli gjort tilgjenngelig av Åpne Data prosjektet.
-   Ved hjelp av løsningen skal være mulig å dynamisk visualisere vilkårlige datasett ettersom de blir publisert/oppdatert.
-    </p>
+
     <br>
     <a class="waves-effect waves-light btn" href="resources/Prosjektskisse.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Prosjektskisse</a>
     <br>
@@ -64,7 +56,7 @@ Prosjektet som vi har fått mulighet til å bidra på heter Åpne data. Dette pr
         <p>Viktor</p>
       </div>
       <div class="col s12 m2">
-        <img src="resources/placeholder-profile-image.jpg" width="150px" alt="" class="circle responsive-img">
+        <img src="resources/jerry.jpg" width="150px" alt="" class="circle responsive-img">
         <p>Jerry</p>
       </div>
       <div class="col s12 m2">
