Add new prosjektskisse

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="col s12 center-align-text"><i class="large material-icons" style="font-size: 100px;">cloud_done</i></div>
           <div class="col s12 center-align-text">
              <p>Gruppe 8 Bachelorprosjekt<p>
-    <span class="nav-title btitle" style="font-size: 3em;">Åpne Data Kartvisualisering
+    <span class="nav-title btitle" style="font-size: 3em;">Åpne Data | Data Anonymisering
 
             </span></div>
          </div>
