--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="css/sitecss.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Anton|Monoton|Russo+One" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    
     <!-- Compiled and minified CSS -->
@@ -20,21 +20,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body>
-     <nav class="nav-extended grey" style=" height: 30em; background-size: cover; background-image: url('oslo.jpg');">
-      <div class="valign-wrapper center-align" style="height: 30em;">
-       <div class="nav-wrapper" style="width:100%;">
-        <div class="nav-content">
-         <div class="row">
-          <div class="col s12 center-align-text"><i class="large material-icons" style="font-size: 100px;">cloud_done</i></div>
-          <div class="col s12 center-align-text">
+     <nav class="hero-div grey ">
+          <div class="valign-wrapper center-align" style="height: 100%;">
+            <div class="circle-div">
+          <i class="large material-icons" style="font-size: 100px;">cloud_done</i>
              <p>Gruppe 8 Bachelorprosjekt<p>
-    <span class="nav-title btitle" style="font-size: 3em;">Åpne Data | Data Anonymisering Tjeneste
-
-            </span></div>
+    <span class=" btitle"><b>Åpne Data | AaaS</b> </span><br>
+    <span class=" btitle"><b>Anonymization-as-a-Service</b></span>
          </div>
-       </div>
-      </div>
-    </div>
+        </div>
   </nav>
    <div class="container">
     <h3>Beskrivelse</h3>
@@ -43,12 +37,12 @@
 NAV IT Informasjonsplattform holder på med et større arbeid for å oppdatere sin infrastruktur for å kunne levere 
 bedre tjenester. Vi har fått tilbud om å være med å bidra på et prosjekt som er en del av dette arbeidet. 
 
-    <br>
+    <br><br>
     <a class="waves-effect waves-light btn" href="resources/Prosjektskisse.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Prosjektskisse</a>
     <br>
     <br>
    </div>
-   <div class="card-panel center-align" style="background-color: #FFCC00;">
+   <div class="card-panel center-align" style="background-color: #609efd;">
     <span class="center-align" style="padding:1em;"><h4>Gruppemedlemer</h4></span>
     <div class="row center-align center-align-text">
       <div class="col s12 m3">
