Added image of my self to the project page

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ bedre tjenester. Vi har fått tilbud om å være med å bidra på et prosjekt so
         <img src="resources/sondre.png" width="150px" alt="" class="circle responsive-img">
         <p>Sondre</p>
       </div>
-      <div class="col s12 m3">
-        <img src="resources/placeholder-profile-image.jpg" width="150px" alt="" class="circle responsive-img">
+      <div class="col s12 m2">
+        <img src="resources/julian.jpg" width="150px" alt="" class="circle responsive-img">
         <p>Julian</p>
       </div>
     </div>
