lagt til bilde av viktor

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ bedre tjenester. Vi har fått tilbud om å være med å bidra på et prosjekt so
     <span class="center-align" style="padding:1em;"><h4>Gruppemedlemer</h4></span>
     <div class="row center-align center-align-text">
       <div class="col s12 m3">
-        <img src="resources/placeholder-profile-image.jpg" width="150px" alt="" class="circle responsive-img">
+        <img src="resources/viktor.jpg" width="150px" alt="" class="circle responsive-img">
         <p>Viktor</p>
       </div>
       <div class="col s12 m2">
