Refactor to english Add AaaS content Add Pre-Project report

--- a/index.html
+++ b/index.html
@@ -24,26 +24,25 @@
           <div class="valign-wrapper center-align" style="height: 100%;">
             <div class="circle-div">
           <i class="large material-icons" style="font-size: 100px;">cloud_done</i>
-             <p>Gruppe 8 Bachelorprosjekt<p>
+             <p>Group 8 Bachelor Project<p>
     <span class=" btitle"><b>Åpne Data | AaaS</b> </span><br>
     <span class=" btitle"><b>Anonymization-as-a-Service</b></span>
          </div>
         </div>
   </nav>
    <div class="container">
-    <h3>Beskrivelse</h3>
+    <h3>Description</h3>
     <p>
-
-NAV IT Informasjonsplattform holder på med et større arbeid for å oppdatere sin infrastruktur for å kunne levere 
-bedre tjenester. Vi har fått tilbud om å være med å bidra på et prosjekt som er en del av dette arbeidet. 
+      Our goal is to develop and build a data anonymization service along with a software framework for simple user interaction. The solution will provide availability to the already existing anonymization functionality from the open-source ARX software library. The technical delivery is separated into two logical components; a web-API service that will deliver ARX functionality through a well documented RESTful API, and one or more API consumer modules that will allow integration with data-science tools. To the author's knowledge, this kind of data-anonymization-as-a-service product does not exist at the present time.
 
     <br><br>
-    <a class="waves-effect waves-light btn" href="resources/Prosjektskisse.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Prosjektskisse</a>
+    <a class="waves-effect waves-light btn" href="resources/Prosjektskisse.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Project Outline (NO)</a>
+    <a class="waves-effect waves-light btn" href="resources/Pre-Project_Report.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Pre-Project Report (EN)</a>
     <br>
     <br>
    </div>
    <div class="card-panel center-align" style="background-color: #609efd;">
-    <span class="center-align" style="padding:1em;"><h4>Gruppemedlemer</h4></span>
+    <span class="center-align" style="padding:1em;"><h4>Group Members</h4></span>
     <div class="row center-align center-align-text">
       <div class="col s12 m3">
         <img src="resources/viktor3.jpg" width="150px" alt="" class="circle responsive-img">
@@ -51,25 +50,25 @@ bedre tjenester. Vi har fått tilbud om å være med å bidra på et prosjekt so
       </div>
       <div class="col s12 m2">
         <img src="resources/jerry.jpg" width="150px" alt="" class="circle responsive-img">
-        <p>Jerry</p>
+        <p>Jeremiah</p>
       </div>
       <div class="col s12 m2">
         <img src="resources/small_lord.jpg" width="150px" alt="" class="circle responsive-img">
-        <p>Andre</p>
+        <p>André</p>
       </div>
       <div class="col s12 m2">
         <img src="resources/sondre.png" width="150px" alt="" class="circle responsive-img">
         <p>Sondre</p>
       </div>
-      <div class="col s12 m2">
+      <div class="col s12 m3">
         <img src="resources/julian.jpg" width="150px" alt="" class="circle responsive-img">
         <p>Julian</p>
       </div>
     </div>
    </div>
    <footer class="center-align">
-    <a href="#">Om oss</a> 
-    <a href="#">OsloMET Bacheloroppgave</a>
+    <a href="#">About us</a> 
+    <a href="https://www.cs.hioa.no/data/bachelorprosjekt/">OsloMET Bachelor project</a>
    </footer>
   </body>
 </html>
