Update page description

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
   </nav>
    <div class="container">
     <h3>Description</h3>
+
     <p>
-      Our goal is to develop and build a data anonymization service along with a software framework for simple user interaction. The solution will provide availability to the already existing anonymization functionality from the open-source ARX software library. The technical delivery is separated into two logical components; a web-API service that will deliver ARX functionality through a well documented RESTful API, and one or more API consumer modules that will allow integration with data-science tools. To the author's knowledge, this kind of data-anonymization-as-a-service product does not exist at the present time.
+      Åpne Data | Anonymization-as-a-Service is a project completet on behalf of NAV IT Data og Innsikt. The project main goal is to deliver the cutting edge anonymization functionality in a new, improved, more scalable, more modular and less coupled package. Flollow industry standards in regards to CI, DevOps an Microservice Architecture.
+    </p>
+    <p>Our goal is to develop and build a data anonymization service along with a software framework for simple user interaction. The solution will provide availability to the already existing anonymization functionality from the open-source ARX software library. The technical delivery is separated into two logical components; a web-API service that will deliver ARX functionality through a well documented RESTful API, and one or more API consumer modules that will allow integration with data-science tools. </p>
+    <p>To the teams knowledge, this kind of data-anonymization-as-a-service product does not exist at the present time.
 
     <br><br>
     <a class="waves-effect waves-light btn" href="resources/Prosjektskisse.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Project Outline (NO)</a>
