update Pre-Project report

--- a/index.html
+++ b/index.html
@@ -35,10 +35,18 @@
 
     <p>
       Åpne Data | Anonymization-as-a-Service is a project completet on behalf of NAV IT Data og Innsikt. The project main goal is to deliver the cutting edge anonymization functionality in a new, improved, more scalable, more modular and less coupled package. Following industry standards in regards to CI, DevOps and microservice architecture.
-    </p>
-    <p>Our goal is to develop and build a data anonymization service along with a software framework for simple user interaction. The solution will provide availability to the already existing anonymization functionality from the open-source ARX software library. The technical delivery is separated into two logical components; a web API service that will deliver ARX functionality through a well documented RESTful API, and one or more API consumer modules that will allow integration with data-science tools. </p>
-    <p>To the teams knowledge, this kind of data-anonymization-as-a-service product does not exist at the present time.
-
+      Our goal is to develop and build a data anonymization service along with software
+       packages for simpler intefacing with the service. The solution will 
+       provide availability to the already existing anonymization functionality 
+       from the open-source ARX software library.</p>
+       
+       <p>The technical delivery is separated
+        into two logical components; a web API service that will deliver ARX functionality 
+        through a well documented RESTful API. And wrapper packages, designed to provide 
+        user-friendly interfacing with the service, and that will allow 
+        integration with data-science tools.</p>
+    <p>To the teams knowledge, this kind of data-anonymization-as-a-service product 
+      does not exist at the present time.</p>
     <br><br>
     <a class="waves-effect waves-light btn" href="resources/Prosjektskisse.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Project Outline (NO)</a>
     <a class="waves-effect waves-light btn" href="resources/Pre-Project_Report.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Pre-Project Report (EN)</a>
