Add Product Specification pdf to website

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <br><br>
     <a class="waves-effect waves-light btn" href="resources/Prosjektskisse.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Project Outline (NO)</a>
     <a class="waves-effect waves-light btn" href="resources/Pre-Project_Report.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Pre-Project Report (EN)</a>
+    <a class="waves-effect waves-light btn" href="resources/Product_Specification.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Product Specification (EN)</a>
     <br>
     <br>
    </div>
