--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <div class="circle-div">
           <i class="large material-icons" style="font-size: 100px;">cloud_done</i>
              <p>Group 8 Bachelor Project<p>
-    <span class=" btitle"><b>NAV IT</b> </span><br>
-    <span class=" btitle"><b>Anonymization-as-a-Service</b></span>
+    <span class=" btitle"><b>Anonymization-as-a-Service</b></span><br>
+    <span class=" btitle"><b>NAV IT</b> </span>
+    
          </div>
         </div>
   </nav>
