Uploaded thesis, and favicon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Gruppe 8">
   <meta name="description" content="Presentasjons side for Bachelorprosjektet til gruppe 8 for OsloMET 2019">
   <meta name="keywords" content="Bachelor Oppgave, OsloMET, DATA/IT, 2019">
-  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <link rel="stylesheet" href="css/sitecss.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Anton|Monoton|Russo+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
@@ -52,6 +52,8 @@
     <a class="waves-effect waves-light btn" href="resources/Prosjektskisse.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Project Outline (NO)</a>
     <a class="waves-effect waves-light btn" href="resources/Pre-Project_Report.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Pre-Project Report (EN)</a>
     <a class="waves-effect waves-light btn" href="resources/Product_Specification.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Product Specification (EN)</a>
+    <a class="waves-effect waves-light btn" href="resources/Anonymization_as_a_Service_Thesis.pdf" target="_blank"><i class="material-icons right">cloud_download</i>Bachelor Thesis (EN)</a>
+    <a class="waves-effect waves-light btn disabled" target="_blank"><i class="material-icons right">cloud_download</i>Presentation (EN)</a>
     <br>
     <br>
    </div>
